# NotTooSmartPointers

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
include/ntsp/: enable_shared_from_this.h  reference_counter.h  shared_pointer.h  traits.h  types.h  weak_pointer.h
ntsp/: conaninfo.txt  conanmanifest.txt
ntsp/include/: EnableSharedFromThis.h  ReferenceCounter.h  Traits.h  WeakPointer.h
ntsp/include/ntsp/: SharedPointer.h
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  enable_shared_from_this_test.cpp  shared_ptr_test.cpp  weak_ptr_test.cpp
